--- a/style.css
+++ b/style.css
@@ -86,23 +86,27 @@ ion-icon{
     justify-content: space-between;
     top: 0;
     left: 0;
+    right: 0;
     bottom: 0;
-    width: 80px;
     height:100vh;
-    text-align: center;
+    align-items: center;    
+    width:80px;
     background: linear-gradient(-90deg, hsla(0 0% 0% / 20%), var(--bg-dark) 100%);
     box-shadow: 2px 0px 15px 5px hsla(0 0% 0% / 80%);
     transition: width .05s linear;
-    z-index: 1000;
+    z-index: 100;
 }
 
 li{
     position: relative;
     display: flex;
+    gap: 2.5em;
     flex-flow: column;
     justify-content: center;
     height: 80px;
 }
+
+
 
 .nav-text{
     position: absolute;
@@ -110,22 +114,6 @@ li{
     width: 0;
     top: 25px;
 }
-
-li:hover .nav-text {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    left: 70px;
-    visibility: visible;
-    transition: all 0.2s linear;
-    width: 100px;
-    height: 30px;
-    font-weight: 600;
-    background: linear-gradient(-90deg, hsla(0 0% 80% / 10%), hsla(0 0% 0% / 100%) 100%);
-    color: /* hsla(0 0% 90% / 90%) */lightgreen;
-    border-radius: 25px;
-    box-shadow: -2px -1px 1px 0px hsla(0 0% 50% / 85%), inset -30px 20px 50px -50px var(--bg-dark);
-  }
 
 .nav-contact{
     display:flex;
@@ -149,6 +137,8 @@ li:hover .nav-text {
     padding:4em;
 }
 
+/* HEADER - HOME */
+
 #home{
     display: flex;
     flex-direction: column;
@@ -158,29 +148,38 @@ li:hover .nav-text {
     align-items: center;
 }
 
+/* TYPESCRIPTER */
+
 .anim-text{
-    font-size: 3.5em;
-    width: max-content;
+    font-size: 3.75em;
+    width: auto;
     position: relative;
+    color: var(--rainbow);
 }
 
 .anim-text::before{
     content: "";
     position: absolute;
-    inset: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     background-color: hsla(0 0% 15% / 1);
-    animation: type 4.5s steps(27) 2s forwards;
+    animation: type 3s steps(15) 1.5s forwards;
 }
 
 h1::after {
     content: "";
     position: absolute;
     width: 0.1em;
-    inset: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     background: darkgray;
-    animation: type 4.5s
-        steps(27) 2s forwards,
-      blink 800ms steps(27) infinite;
+    animation: type 3s
+        steps(15) 1.5s forwards,
+      blink 800ms steps(15) infinite;
   }
 
 @keyframes type {
@@ -195,8 +194,30 @@ h1::after {
     }
   }
 
+/* CAPTION SwipeUP */
+
+@keyframes swipeUp{
+    to{
+        opacity:1;
+        transform: translateY(-1.75em);
+    }
+}
 .caption{
+    opacity: 0;
+    font-style: italic;
     font-size: 1.5em;
+    transform:translateY(-0.5em);
+    animation: swipeUp 4s 4.75s forwards; 
+    color: hsl(0 0% 70%);
+}
+
+.welcome{
+    opacity: 0;
+    font-weight: 800;
+    font-size: 4.75em;
+    transform:translateY(0);
+    animation: swipeUp 1.5s 5s forwards;
+    
 }
 
 h2{
@@ -205,4 +226,99 @@ h2{
 
 section{
     height: 100vh;
+}
+
+/* MEDIA QUERYS*/
+
+/* DESKTOP */
+
+@media (min-width:782px){
+
+   /*  .nav-bar{
+        display: flex;
+    } */
+
+    li:hover .nav-text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        left: 55px;
+        visibility: visible;
+        transition: all 0.2s linear;
+        width: 90px;
+        height: 30px;
+        font-weight: 600;
+        background: linear-gradient(-90deg, hsla(0 0% 80% / 10%), hsla(0 0% 0% / 100%) 100%);
+        color: hsl(0 0% 75%);
+        border-radius: 25px;
+        box-shadow: -2px -1px 1px 0px hsla(0 0% 50% / 85%), inset -30px 20px 50px -50px var(--bg-dark);
+      }
+    
+      li:hover ion-icon{
+          color:lightgreen;
+      }
+}
+
+/* MOBILE  */
+
+@media (max-width:780px){
+    .nav-bar{
+        display: none;
+        width:100vw;
+        background-color: hsla(0 0% 5% / .85);
+    }
+
+    .nav-text{
+        visibility: visible;
+        color:white;
+        font-weight: 800;
+        font-size: 2em;
+        padding-left: 1em;
+        letter-spacing: 0.25em;
+    }
+
+    ul{
+        margin-left: 30vw;
+        align-self: flex-start;
+    }
+
+    .hamb{
+        position: relative;
+        background-color: white;
+        height: 0.25em;
+        width: 2em;
+        z-index: 2000;
+    }
+
+    .hamb::before{
+        content: "";
+        position: absolute;
+        top: -12px;
+        right: 0;
+        background-color: white;
+        height: 0.25em;
+        width: 2em;
+    }
+
+    .hamb::after{
+        content: "";
+        position: absolute;
+        top: 12px;
+        right: 0;
+        background-color: white;
+        height: 0.25em;
+        width: 2em;
+    }
+
+    .menu-btn{
+        position: fixed;
+        cursor: pointer;
+        border:none;
+        background: transparent;
+        top: 30px;
+        right: 30px;
+        z-index: 10000;
+        width:2em;
+        height: 2em;
+    }
 }
