--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root{
     --bg-dark:hsla(0 0% 0% / 85%);
     --rainbow: linear-gradient(45deg, yellow, orange, red, purple, rgb(36, 105, 255), green);
+    --steps: steps(15);
 }
 
 *,
@@ -9,7 +10,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    list-style: none;
 }
 
 html{
@@ -19,7 +19,10 @@ html{
     font-size: 16px;
     letter-spacing: 0.1em;
     scroll-behavior: smooth;
+    text-align: center;
 }
+
+
 
 /* LOGO */
 
@@ -86,8 +89,7 @@ ion-icon{
     justify-content: space-between;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
+    
     height:100vh;
     align-items: center;    
     width:80px;
@@ -97,13 +99,14 @@ ion-icon{
     z-index: 100;
 }
 
-li{
+.nav-links > li{
     position: relative;
     display: flex;
     gap: 2.5em;
     flex-flow: column;
     justify-content: center;
     height: 80px;
+    list-style: none;
 }
 
 
@@ -141,7 +144,7 @@ li{
 
 #home{
     display: flex;
-    flex-direction: column;
+    flex-flow: column nowrap;
     margin-left:80px;
     padding:4em;
     justify-content: space-evenly;
@@ -165,7 +168,7 @@ li{
     left: 0;
     right: 0;
     background-color: hsla(0 0% 15% / 1);
-    animation: type 3s steps(15) 1.5s forwards;
+    animation: type 3s var(--steps) 1.5s forwards;
 }
 
 h1::after {
@@ -178,13 +181,13 @@ h1::after {
     right: 0;
     background: darkgray;
     animation: type 3s
-        steps(15) 1.5s forwards,
-      blink 800ms steps(15) infinite;
+        var(--steps) 1.5s forwards,
+      blink 800ms var(--steps) infinite;
   }
 
 @keyframes type {
     to {
-      left: 100%;
+      left: 98%;
     }
   }
 
@@ -199,7 +202,7 @@ h1::after {
 @keyframes swipeUp{
     to{
         opacity:1;
-        transform: translateY(-1.75em);
+        transform: translateY(-1.25em);
     }
 }
 .caption{
@@ -220,12 +223,46 @@ h1::after {
     
 }
 
+/* SECTIONS */
+
+
+
 h2{
+    padding: 0.5em 0;
     font-size: 2.5em;
 }
 
 section{
-    height: 100vh;
+    display: flex;
+    flex-flow: column wrap;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+/* ABOUT */
+
+.avatar{
+    max-width: min-content;
+    border-radius: 50%;
+}
+
+.interests{
+    padding: 1em;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1em 3em;
+}
+
+.about-info{
+    padding: 1em 3em;
+}
+
+h3{
+    padding:1.5em 1em 0 1em;
+    font-size: 1.5em;
 }
 
 /* MEDIA QUERYS*/
@@ -234,9 +271,7 @@ section{
 
 @media (min-width:782px){
 
-   /*  .nav-bar{
-        display: flex;
-    } */
+   
 
     li:hover .nav-text {
         display: flex;
@@ -272,13 +307,13 @@ section{
         visibility: visible;
         color:white;
         font-weight: 800;
-        font-size: 2em;
+        font-size: 1.75em;
         padding-left: 1em;
         letter-spacing: 0.25em;
     }
 
-    ul{
-        margin-left: 30vw;
+    .nav-links{
+        margin-left: 15vw;
         align-self: flex-start;
     }
 
@@ -320,5 +355,25 @@ section{
         z-index: 10000;
         width:2em;
         height: 2em;
+    }
+
+
+    #home{
+        margin:0;
+        padding: 0;
+    }
+    
+
+    .anim-text{
+        font-size: 3em;
+    }
+
+    .welcome{
+        font-size: 3em;    
+    }
+
+    .main{
+        margin:0;
+        padding: 0;
     }
 }
