--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 :root{
     --bg-dark:hsla(0 0% 0% / 85%);
+    --bg-darker:hsla(0 0% 0% / 45%);
     --rainbow: linear-gradient(45deg, yellow, orange, red, purple, rgb(36, 105, 255), green);
+    --bg-cover:hsla(0 0% 9% / 1);
     --steps: steps(15);
 }
 
@@ -18,6 +20,7 @@ html{
     font-family: monospace;
     font-size: 16px;
     letter-spacing: 0.1em;
+    line-height: 1.5;
     scroll-behavior: smooth;
     text-align: center;
 }
@@ -137,7 +140,6 @@ ion-icon{
 
 .main{
     margin-left:80px;
-    padding:4em;
 }
 
 /* HEADER - HOME */
@@ -149,6 +151,7 @@ ion-icon{
     padding:4em;
     justify-content: space-evenly;
     align-items: center;
+    background-color: var(--bg-darker);
 }
 
 /* TYPESCRIPTER */
@@ -167,7 +170,7 @@ ion-icon{
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: hsla(0 0% 15% / 1);
+    background-color: var(--bg-cover);
     animation: type 3s var(--steps) 1.5s forwards;
 }
 
@@ -228,16 +231,18 @@ h1::after {
 
 
 h2{
-    padding: 0.5em 0;
+    padding: .5em 0 .75em 0;
     font-size: 2.5em;
+    text-shadow: 3px 2px 3px hsla(0 0% 70%/ 1);
 }
 
 section{
     display: flex;
     flex-flow: column wrap;
     min-height: 100vh;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    padding: 0 2em 2em 2em;
 }
 
 /* ABOUT */
@@ -265,12 +270,54 @@ h3{
     font-size: 1.5em;
 }
 
+/* WORK */
+#work{
+    background-color: var(--bg-darker);
+}
+
+/* SKILLS */
+#skills{
+
+}
+
+.skill-icon{
+    max-width:70px;    
+}
+
+.github{
+    background-color: white;
+    border-radius: 100%;
+}
+
+.icon-card{
+    padding:1.75em;
+    border-radius: 0.35em;
+    background-color: var(--bg-darker);
+    box-shadow: 0px 0px 10px 10px  hsla(0 0% 10% / 40%),
+        5px 5px 8px 2px hsla(0 0% 55%/.45);
+}
+
+.card-container{
+    display:flex;
+    gap:1em;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+/* CONTACT */
+#contact{
+    background-color: var(--bg-darker);
+}
+
 /* MEDIA QUERYS*/
 
 /* DESKTOP */
 
 @media (min-width:782px){
 
+    .menu-btn{
+        display:none;
+    }
    
 
     li:hover .nav-text {
