--- a/style.css
+++ b/style.css
@@ -87,9 +87,9 @@ ion-icon{
 
 .nav-bar{
     display: flex;
-    flex-direction: column;
+    flex-flow: column wrap;
     position: fixed;
-    justify-content: space-between;
+    justify-content: space-evenly;
     top: 0;
     left: 0;
     height:100vh;
@@ -105,7 +105,7 @@ ion-icon{
     position: relative;
     display: flex;
     gap: 2.5em;
-    flex-flow: column;
+    flex-flow: column wrap;
     justify-content: center;
     height: 80px;
     list-style: none;
@@ -229,8 +229,8 @@ h1::after {
 
 
 h2{
-    padding: .5em 0 .25em 0;
-    font-size: clamp(3em,2em + 3.8vw ,4em);
+    padding-top: .25em;
+    font-size: clamp(2em,-0.5em + 9vw ,4em);
     text-shadow: 3px 2px 3px hsla(0 0% 70%/ 1);
 }
 
@@ -317,18 +317,18 @@ h3{
 
 .form-container{
     display: flex;
-    align-items: center;
-    justify-content: center;
     width: 60%;
-    height: 50vh;
+    height: 100vh;
     
 }
 
 .form-container form{
     position: relative;
-    width: 100%;
+    width: 90vw;
+    height: 100%;
     padding: 1em ;
-    margin-bottom: 1em;
+    margin: 2.5em 0 1em 0;
+    
 }
 
 .input-container{
@@ -415,12 +415,11 @@ h3{
 
 /* DESKTOP */
 
-@media (min-width:782px){
+@media (min-width:741px) and (min-height:601px) {
 
     .menu-btn{
         display:none;
     }
-   
 
     li:hover .nav-text {
         display: flex;
@@ -440,18 +439,21 @@ h3{
     
       li:hover ion-icon{
           color:lightgreen;
-      }
-
-      
+      }      
 }
 
 /* MOBILE  */
 
-@media (max-width:780px){
+@media (max-width:740px), (max-height:600px){
     .nav-bar{
         display: none;
         width:100vw;
         background-color: hsla(0 0% 5% / .85);
+    }
+
+    .nav-links{
+        align-self: flex-start;
+        margin-left: 10vw;
     }
 
     .nav-text{
@@ -461,11 +463,6 @@ h3{
         font-size: 1.75em;
         padding-left: 1em;
         letter-spacing: 0.25em;
-    }
-
-    .nav-links{
-        margin-left: 15vw;
-        align-self: flex-start;
     }
 
     .hamb{
