--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ h1::after {
 @keyframes swipeUp{
     to{
         opacity:1;
-        transform: translateY(.5em);
+        transform: translateY(.2em);
     }
 }
 .caption{
@@ -313,7 +313,7 @@ h3{
 .work-skill{
     width: max-content;
     background-color: var(--bg-cover);
-    border-radius: 3px;
+    border-radius: 0.35em;
     padding: .01em .4em;
     font-weight: bold;
     font-size: 0.8em;
@@ -467,7 +467,7 @@ h3{
 }
 
 .copyright{
-    color: hsla(0 0% 35%/1);
+    color: hsla(0 0% 75%/1);
     font-size: .9em;
 }
 
